tests/error/effects_errors/pure_calls_explicit_callable.err
Error: Too many effects (at $FILE:5:10)
  | 
3 | @guppy(effects=[])
4 | def main(impure_f: Callable[[int], int, [ANY]]) -> int:
5 |    return impure_f(5)
  |           ^^^^^^^^ Callee of type `int -[ANY]-> int` has effects [ANY] that
  |                    exceed those allowed

Note:
  | 
2 | 
3 | @guppy(effects=[])
  |  --------------------- Allowed effects `[]` declared here

Guppy compilation failed due to 1 previous error
